syntax="proto3";

package users;

import "google/protobuf/timestamp.proto";

option go_package="./proto/users";

message User {
    string UserID = 1;
    int32 SerialNumber = 2;
    string Name = 3;
    int32 Batch = 4;
    string Email = 5;
    string Password = 6;
    google.protobuf.Timestamp CreatedAt = 7;
    string CreatedBy = 8;
    google.protobuf.Timestamp UpdatedAt = 9;
    string UpdatedBy = 10;
    google.protobuf.Timestamp DeletedAt = 11;
    string DeletedBy = 12;
}

message Filter {
    int32 Offset = 1;
    int32 Limit = 2;
    string SortBy = 3;
    string Order = 4;
    string SearchTerm = 5;
}

message Stats {
    int32 Count = 1;
    int32 TotalAmount = 2;
}

message CreateUserRequest {
    User User = 1;
}

message CreateUserResponse {
    string UserID = 1;
}

message GetUserRequest {
    User User = 1;
}

message GetUserResponse {
    User User = 1;
}

message UpdateUserRequest {
    User User = 1;
}

message UpdateUserResponse {
    User User = 1;
}

message DeleteUserRequest {
    User User = 1;
}

message DeleteUserResponse {}

message ListUserRequest {
    Filter Filter = 1;
}

message ListUserResponse {
   repeated User User = 1;
}

message UserStatsRequest {
    Filter Filter = 1;
}

message UserStatsResponse {
    Stats Stats = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns(CreateUserResponse) {}
    rpc GetUser(GetUserRequest) returns(GetUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns(DeleteUserResponse) {}
    rpc ListUser(ListUserRequest) returns(ListUserResponse) {}
    rpc UserStats(UserStatsRequest) returns(UserStatsResponse) {}
}